# audiodecoder.upse

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  azure-pipelines.yml
.github/workflows/: build.yml  increment-version.yml  sync-addon-metadata-translations.yml
audiodecoder.upse/: addon.xml  addon.xml.in
audiodecoder.upse/resources/language/resource.language.ca_es/: strings.po
audiodecoder.upse/resources/language/resource.language.da_dk/: strings.po
audiodecoder.upse/resources/language/resource.language.de_de/: strings.po
audiodecoder.upse/resources/language/resource.language.en_gb/: strings.po
audiodecoder.upse/resources/language/resource.language.es_es/: strings.po
audiodecoder.upse/resources/language/resource.language.et_ee/: strings.po
audiodecoder.upse/resources/language/resource.language.fi_fi/: strings.po
audiodecoder.upse/resources/language/resource.language.fr_fr/: strings.po
audiodecoder.upse/resources/language/resource.language.hr_hr/: strings.po
audiodecoder.upse/resources/language/resource.language.it_it/: strings.po
audiodecoder.upse/resources/language/resource.language.ko_kr/: strings.po
audiodecoder.upse/resources/language/resource.language.ru_ru/: strings.po
audiodecoder.upse/resources/language/resource.language.zh_cn/: strings.po
debian/: changelog.in  control  copyright  rules
lib/: kodi-libupse-note.txt
lib/libupse/: CMakeLists.txt
src/: UPSECodec.cpp  UPSECodec.h
